# LEIT-motifs

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  EvaluationSuite.ipynb  Failures2.csv  Motif_Discovery.ipynb  README.md  RP_DC.py  ResultsAggregate.xlsx  Thesis_Plots.ipynb  base.py  delta_results.csv  env.yml  functions.py  local.py  mmotif.py  nohup.out  p10.csv  p11.csv  p12  p12.csv  p13  p13.csv  pyproject.toml  r_dataset0  r_dataset1  r_dataset2  r_dataset3  r_partial_dataset0.csv  r_partial_dataset1.csv  r_partial_dataset2  r_partial_dataset2.csv  r_partial_dataset3  r_partial_dataset3.csv  recall_results.csv  requirements.txt  results.csv  results.txt  results_run3.csv  scalability.csv  (+1 more)
Datasets/: FL010.hea  Whale.ipynb  earthquake.csv  el_load_extractor.py
LEITmotifs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
MOMENTI.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
external_dependecies/: Seism_retr.py
results/: Failures.csv  KLr_plotter.py  K_results.csv  L_results.csv  MemLK_results.csv  Mem_results.csv  Noise.csv  R_results.csv  ResultsAggregate.xlsx  constell_plotter.py  delta_plotter.py  delta_results.csv  dist_time.csv  multi_results.csv  noise.csv  plotter.py  r_dataset0.csv  r_dataset1.csv  r_dataset2.csv  r_dataset3.csv  r_results.csv  recall_results.csv  recall_time.py  recall_time_plotter.py  results_run2.csv  results_run4.csv  results_run5.csv  results_run6.csv  results_run7.csv  scalability.csv  scalability_plotter.py
source/: LEIT-motifs.py  LEIT_motifs.py  LEITmotifs.py  MOMENTI.py  RPG_CF.py  RP_DC.py  RP_GRAPH.py  RP_GRAPH_MULTI.py  RP_MH.py  __init__.py  base.py  extended_test.py  extra.py  find_bin_width.py  graph_construction  hash_lsh.py  hash_lsh_jax.py  jitted_utilities.py  playground.py  random_selection.py  rel_contr.py  sphere.py  stop.py  stumpy_test.py  test.py  time.py
tests/: delta_test.py  emd_test.py  extended_test.py  memray-flamegraph-test.py.530642.html  noise_test.py  p.py  recall_test.py  rs_test.py  scal_test.py  test.py  (+1 more)
(+13 files in other folders)
